# cportage

./: .travis.yml  AUTHORS  CMakeLists.txt  INSTALL  README  README.markdown  README.md  compile  config.h.in  run_tests  splint-check
cmake/Modules/: FindLibhash.cmake  FindPCRE.cmake  FindPOPT.cmake  FindPopt.cmake
cmake/checks/: realpath_null.c
doc/: CMakeLists.txt  MagicEnvVars.txt
include/: CMakeLists.txt  cportage.h
include/cmerge/: actions.h  options.h
include/cportage/: atom.h  config.h  eapi.h  error.h  io.h  macros.h  object.h  object.r  object_impl.h  package.h  porttree.h  repository.h  settings.h  shellconfig.h  strings.h  vartree.h  version.h
man/: CMakeLists.txt  cmerge.1.in  cportage.3.in
po/: CMakeLists.txt
splint-include/: glib-object.h  glib.h
splint-include/gio/: gio.h
splint-include/glib/: gstdio.h
src/: CMakeLists.txt  atom.c  cmerge.c  config.c  config.h.in
src/cmerge/: CMakeLists.txt  actions.h  clean_action.c  cmerge.c  config.h.in  help_action.c  info_action.c  install_action.c  main.c  nice.c  nice.h  search_action.c  sync_action.c  version_action.c
src/cportage/: CMakeLists.txt  atom.c  atom.h  atom_parser.y  atom_parser_ctx.h  atom_parser_types.h  atom_scanner.l  atomparser.y  atomparser_ctx.h  atomparser_types.h  atomscanner.l  collections.c  collections.h  configprotect.c  cportage.pc.in  eapi.c  eapi.h  error.c  error.h  incrementals.c  incrementals.h  io.c  io.h  macros.h  object.c  package.c  package.h  path.c  path.h  porttree.c  repository.c  repository.h  settings.c  settings.h  shell_parser.y  shell_parser_ctx.h  shell_scanner.l  shellconfig.h  shellconfig_ctx.h  shelllexer.l  (+9 more)
src/cportageq/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  atom_test.c  settings_test.c  shellconfig_test.c  shellconfig_test_comments.conf  shellconfig_test_escapes.conf  shellconfig_test_exotic.conf  shellconfig_test_line_cont.conf  shellconfig_test_simple.conf  shellconfig_test_source.conf  shellconfig_test_source_1.conf  strings_concat_test.c  strings_test.c  strings_trim_test.c  version_test.c
tests/roots/incrementals/etc/make.profile/: make.defaults
tests/roots/incrementals/etc/parent/: make.defaults
tests/roots/profiles_order/etc/make.profile/: make.defaults
tests/roots/use_expand/etc/make.profile/: make.defaults
tests/roots/use_expand_override/etc/: make.conf
tests/roots/use_expand_override/etc/make.profile/: make.defaults
tests/roots/use_expand_stack/etc/make.profile/: make.defaults
tests/roots/use_force/etc/make.profile/: make.defaults  use.force
tests/roots/use_force/etc/parent/: use.force
tests/roots/use_mask/etc/make.profile/: make.defaults  parent  use.mask
tests/roots/use_mask/etc/parent/: use.mask
tests/shellconfig/: invalid03.conf  simple_make.conf  valid01.conf  valid03.conf
