macro(add_cportage_test _test_name _test_source)
  add_executable(${_test_name} ${_test_source})
  set_link_flags(${_test_name})
  target_link_libraries(${_test_name} cportage)
  add_test(${_test_name} ${_test_name} "${CMAKE_CURRENT_SOURCE_DIR}")
endmacro()

add_cportage_test(atom_test atom_test.c)
add_cportage_test(strings_test strings_test.c)
add_cportage_test(shellconfig_test shellconfig_test.c)
